added security config